Problem: reindexing large datasets is very time consuming
Upon index initialization, index has no idea if the object
store's data has been indexed.

Solution: in PostgreSQL-backed journal, assign sequential
IDs to entities and introduce the use of NotSeenBy query option
to avoid reindexing